Dockerfile: Removed JLink because too unstable
Signed-off-by: Adrien Navratil <adrien1975@live.fr>